# SnakeGame-Rust

./: .gitignore  README.md
game/: Cargo.toml
game/src/: draw.rs  game.rs  main.rs  snake.rs
